# asimov-academy-streamlit

./: .gitignore  pyproject.toml  readme.md
src/app/dash_fifa/: 1_🏠_home.py  dash_fifa.md
src/app/dash_fifa/pages/: 2_🏃_players.py  3_⚽_teams.py
src/tests/: spotify.py
src/tests/spotify_app/: spotify.md  spotify.py
