[tool.poetry]
name = "asimov-academy-streamlit"
version = "0.1.0"
description = "Criando Aplicativos Web com Streamlit"
authors = ["Erick Bryan Cubas <thecubas@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
